--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="reduce_height">Reduce height for landscape</string>
     <string name="reduce_description">This hook will reduce screen width &amp; height by 1px pretending thin navigation bar.</string>
     <string name="hide_navbar_disable">Disable Navigation Bar by using global configuration</string>
-    <string name="hide_navbar_0way">Use 0 pixel width/height to hide Navigation Bar</string>
+    <string name="hide_navbar_0way">Set 0 pixel to Navigation Bar config and don\'t add it</string>
+    <string name="soft_reboot">Proceed to Reboot</string>
 </resources>
